openturns/1.17/_sources/auto_probabilistic_modeling/copulas/plot_extract_copula.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_probabilistic_modeling/copulas/plot_extract_copula.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_probabilistic_modeling_copulas_plot_extract_copula.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_probabilistic_modeling_copulas_plot_extract_copula.py:


Extract the copula from a distribution
======================================

.. GENERATED FROM PYTHON SOURCE LINES 6-8

In this example we are going to retrieve the copula from a multidimensional distribution.


.. GENERATED FROM PYTHON SOURCE LINES 10-16

.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 17-18

create a multivariate gaussian distribution

.. GENERATED FROM PYTHON SOURCE LINES 18-25

.. code-block:: default

    mu = [0.0] * 2
    sigma = [1.0]*2
    R = ot.CorrelationMatrix(2)
    R[0, 1] = 0.25
    distribution = ot.Normal(mu, sigma, R)
    print(distribution)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Normal(mu = [0,0], sigma = [1,1], R = [[ 1    0.25 ]
     [ 0.25 1    ]])




.. GENERATED FROM PYTHON SOURCE LINES 26-27

extract the copula

.. GENERATED FROM PYTHON SOURCE LINES 27-29

.. code-block:: default

    copula = distribution.getCopula()
    print(copula)




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    NormalCopula(R = [[ 1    0.25 ]
     [ 0.25 1    ]])





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.001 seconds)


.. _sphx_glr_download_auto_probabilistic_modeling_copulas_plot_extract_copula.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_extract_copula.py <plot_extract_copula.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_extract_copula.ipynb <plot_extract_copula.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
